0003989: Java versions 11 and 12 should work with SymmetricDS