@@ -115,11 +115,11 @@ public class MetaDataColumnDescriptor {
         if (foundIdx > 0) {
             switch (_jdbcType) {
             case Types.BIT:
-                return new Boolean(resultSet.getBoolean(foundIdx));
+                return Boolean.valueOf(resultSet.getBoolean(foundIdx));
             case Types.INTEGER:
-                return new Integer(resultSet.getInt(foundIdx));
+                return Integer.valueOf(resultSet.getInt(foundIdx));
             case Types.TINYINT:
-                return new Short(resultSet.getShort(foundIdx));
+                return Short.valueOf(resultSet.getShort(foundIdx));
             default:
                 return resultSet.getString(foundIdx);
             }
